--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,11 @@
 @import 'tailwindcss';
-
 @import "tw-animate-css";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
